--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
                       </ul>
                     </div>
                   </a>
+                  <a class="swiper-slide portfolio__slide" href="https://sergeysvetlov.github.io/booking/" data-slide>
+                    <h3>Букинг</h3>
+                    <picture>
+                      <source type="image/webp" srcset="img/content/booking.webp, img/content/booking@2x.webp 2x">
+                      <img class="portfolio__img" src="img/content/booking.jpg" width="780" height="882" alt="Скриншот сервиса">
+                    </picture>
+                    <div class="portfolio__description">
+                      <span>Букинг-сервис на JavaScript</span>
+                      <ul class="portfolio__achievement">
+                        <li>Загрузка карты и меток с данными</li>
+                        <li>Валидация формы</li>
+                        <li>Взаимодействие с сервером</li>
+                      </ul>
+                    </div>
+                  </a>      
                   <a class="swiper-slide portfolio__slide" href="https://sergeysvetlov.github.io/kekstagram/" data-slide>
                     <h3>Кекстаграм</h3>
                     <picture>
